bugFixed : aligned like-button and text-card correctly

--- a/styles.css
+++ b/styles.css
@@ -222,10 +222,10 @@ body.dark-mode h1 {
 /* Like Button */
 .fav-btn {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   height: 100%;
-  width: 100%;
+  width: 20%;
   font-size: 3rem;
   padding-bottom: 2rem;
   padding-left: 2rem;
